Supply replicated ranges before recovery (#2979)
This commit adds the following changes to the indexing shard recovery logic:
- blob listings are now concurrently executed using the prewarming thread pool
- once blobs are listed, the latest bcc blob is read using the cache
- once the commit files of the last commit are identified, the list of referenced blobs is built
- every referenced blob is then concurrently read using the cache (populating the first region for every header of the blob up to the commit that contains the file) and the replicated ranges information are built
- finally, the replicated ranges information are provided to the IndexDirectory just before recovery continues

Relates